Column (nav, content) width issues on mobile

--- a/wp-content/themes/scripted/scss/_sections.scss
+++ b/wp-content/themes/scripted/scss/_sections.scss
@@ -534,7 +534,7 @@
 .school-list {
   .school {
     @include border-top;
-    padding: 1em 0;
+    padding: 1em 2em 1em 0;
     &:last-child {
       border-bottom: 1px solid $grey-light;
     }
